syntax = "proto3";

option java_outer_classname = "MdStockSnapshotTempBO_PRO";
option java_package = "com.purefun.fams.md.pro";

message MdStockSnapshotTempBO {
     string uuid = 1;
     sint64 boid = 2;
     string destination = 3;
    string security_code = 4;
    string exch = 5;
    sint64 dateTime = 6;
    double open = 7;
    double preClose = 8;
    double lastPrice = 9;
    double high = 10;
    double low = 11;
    repeated  double buyPriceList = 12;
    repeated  sint64 buyQtyList = 13;
    repeated  double sellPriceList = 14;
    repeated  sint64 sellQtyList = 15;
    sint64 totalVolume = 16;
    double totalAmont = 17;
}
